styles.css
/* ... */
.hero-inputs-container{
    display: flex;
    width: 100%;
    justify-content: center;
}

.hero-inputs{
    width: 820px;
    padding: 30px;
    background-color: #ffffff;
    display: inline-flex;
    /* justify-content: center;
    align-items: center;
    align-content: center; */
    position: absolute;
    gap: 15px;
    border-radius: 5px;
    top: 505px;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
}

.hero-inputs input[type="search"]{
    padding-top: 7px;
    padding-bottom: 7px;
    padding-left: 30px;
    padding-right: 20px;
    border-radius: 5px;
    border-color: #F0F0F0;
    background-color: #FAFBFE;
    border-width: 1px;
    border-style: solid;
}

.searchbtn{
  border: none;
  border-radius: 50px;
  margin-left: 30px;
  color: white;
  cursor: pointer;
  padding: 10px;
  width: 90px;
  background: linear-gradient(
    #DAEDFF 0%,   /* little white at the top */
    #014990 40%,  /* strong navy/blue in the middle */
    #014990 60%,  /* deeper center color */
    #DAEDFF 100%  /* little white at the bottom */
  );
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25); /* soft glow under */
}



.about-section{
    background-image: linear-gradient( #E8F1FF78 40% ,#fff, #E8F1FF78);
    /* background-color: #000; */
    width: 100%;
    height: 700px;
    display: inline-flex;
    justify-content: center;
    gap: 50px;
    /* align-content: center; */
    /* align-items: center; */
    margin-top: 120px;
}

.about-image{
    margin-top: 120px;
}

.about-content{
    display: inline-block;
    margin-top: 150px;
    
}

.about-logo{
    display: inline-flex;
    align-items: center;
}

.about-logo p{
    color: #004990;
    font-weight: bold;
}

.about-content h1{
    font-size: 40px;
    margin-top: 20px;
}

.content-details{
    margin-top: 30px;
    color: #788094;
}
.about-content-numbers{
    display: inline-flex;
    gap: 20px;
    margin-top: 30px;
}

.content-numbers{
    display: inline-block;
    text-align: center;
}

.about-content-numbers h2{
    font-size: 40px;
    color: #004990;
}
.about-content-numbers p{
    font-size: small;
    color: #788094;
}

.abt-btn button{
  border: none;
  border-radius: 50px;
  color: white;
  cursor: pointer;
  padding: 10px;
  margin-top: 30px;
  background: linear-gradient(
    #DAEDFF 0%,   /* little white at the top */
    #014990 40%,  /* strong navy/blue in the middle */
    #014990 60%,  /* deeper center color */
    #DAEDFF 100%  /* little white at the bottom */
  );
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25); /* soft glow under */
}

.services-section{
    display: grid;
    flex-direction: column;
    /* justify-content: center;
    align-items: center; */
    width: 100%;
    height: 900px;
    border-bottom: #000;
    background-color: #ffffff;
    border-width: 100px;
}

.services-section-content{
    display: grid;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 700px;
    border-bottom: #000;
    background-color: #ffffff;
    border-width: 100px;
    width: 100%;
    height: 900px;

}

.service-scetion-header{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;
    width: 100%;
}

.services-logo{
    display: inline-flex;
    gap: 10px;
    text-align: center;
    align-items: center;
    margin-top: 70px;
}

.services-logo p{
    color: #004990;
    font-weight: bold;
}

.service-scetion-header h2{
    text-align: center;
    font-size: 27px;
    color: #000D44;
}

.services-section-cards{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    align-content: center;
    gap: 50px;
    margin-top: 70px;
}

.card-content{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 10px;
    padding-bottom: 10px;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
    border-radius: 15px;
}

.card-content h2{
    color: #000D44;
    font-size: medium;
}

.card-content p{
    color: #788094;
    font-size: small;
}

.card-content button{
    border: none;
  border-radius: 50px;
  color: white;
  cursor: pointer;
  padding: 10px;
  font-size: 10px;
  /* margin-top: 30px; */
  background: linear-gradient(
    #DAEDFF 0%,   /* little white at the top */
    #014990 40%,  /* strong navy/blue in the middle */
    #014990 60%,  /* deeper center color */
    #DAEDFF 100%  /* little white at the bottom */
  );
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25); /* soft glow under */
}

.services-footer {
  position: relative;
  margin-top: 60px;
  text-align: center;
}

/* THE LINE */
.services-footer::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 0;
  width: 100%;
  height: 1px;
  background-color: rgba(0, 0, 0, 0.15);
  z-index: 1;
}

/* THE PILL */
.services-footer span {
  position: relative;
  z-index: 2;
  background: #fff;
  padding: 10px 24px;
  border-radius: 999px;
  font-size: 14px;
  color: #555;
  border-width: 1px;
  border-color: #555;
  border-style: solid;
}


.Why-choose-us{
     background-image: linear-gradient( #E8F1FF78 40% ,#fff, #E8F1FF78);
     width: 100%;
     height: 900px;
     display: inline-flex;
     /* justify-content: center; */
     align-items: center;
     align-content: center;
     margin-top: 100px;

}

.why-choose-us-content{
    display: inline-flex;
    /* background-image: linear-gradient( #E8F1FF78 40% ,#fff, #E8F1FF78); */
     width: 100%;
     /* height: 900px; */
     display: inline-flex;
     justify-content: center;
     align-items: center;
     align-content: center;
}

.why-choose-us-logo span{
    color: #004990;
    font-size: 14px;
    font-weight: bold;
}

.why-choose-us-right-content{
    display: grid;
    flex-direction: column;
    gap: 20px;
}

.why-choose-us-right-content h2{
    color: #000D44;
}

.why-choose-list{
    display: inline-flex;
    gap: 15px;
}
/* ... */

